1998-12-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* activity.h (Activity): Remove stepEntry and stepExit methods
	(moved to design document).
	(ScheduleActivity): Remove setTerminateAtEnd:, getTerminateAtEnd,
	getSynchronizedMode, and getCurrentTimebase (moved to design
	document). Add creating phase tag.
	(ActionType): Remove -getActionType.
	
	* Schedule.m (ConcurrentSchedule_c, ActivationOrder_c,
	ScheduleActivity_c): Add phase tags.

	* SwarmProcess.h (CSwarmProcess): Implement SwarmProcess protocol.

	* Schedule.h (ConcurrentSchedule_c): Implement ConcurrentSchedule
	protocol.
	(ActivationOrder_c): Implement ActivationOrder protocol.
	(ScheduleActivity_c): Implement ScheduleActivity protocol.
	(SwarmActivity_c): Implement SwarmActivity protocol.

	* ActionGroup.m (ForEachActivity_c): Add creating and using phase
	tags.

	* ActionGroup.h (ActionGroup_c): Implement ActionGroup protocol.
	(ForEachActivity_c): Implement ForEachActivity protocol.

	* Makefile.am (Schedule.lo ActionGroup.lo): Depend on CompoundAction.m.

1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* activity.h (ActionGroup): Don't adopt OrderedSet.
	(Schedule): Don't adopt Map.
	(RelativeTime): Remove create:setRelativveTime:.
	(RepeatInterval): Remove create:setRepeatInterval:.
	(Action): Disable declaration of -getActionType.
	(ActionType): Disable declaration of activate:.

	* Schedule.h (Schedule): Implement Schedule protocol.

	* ActionGroup.h (ActionGroup_c): Implement ActionGroup protocol.
	(ConcurrentGroup_c): Implement ConcurrentGroup protocol.

	* Action.m (CAction): Add Using phase tag.

	* Action.h (CAction): Implement Action protocol.

1998-12-16  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c -createEnd]): Use component 
	zone for internal objects of GroupPermutedIndex.

1998-12-15  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): 